--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,44 +8,85 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+  @tailwind base;
+  @tailwind components;
+  @tailwind utilities;
+
+  @layer base {
+    /* Light theme (default) */
+    :root {
+      --text-default: theme('colors.gray.900');
+      --text-subtle: theme('colors.gray.500');
+      --text-primary: theme('colors.blueberry.500');
+      --text-on-primary: theme('colors.white');
+      --text-on-inverted: theme('colors.white');
+      --bg-default: theme('colors.white');
+      --bg-subtle: theme('colors.gray.100');
+      --bg-primary: theme('colors.blueberry.500');
+      --bg-inverted: theme('colors.black');
+      --border-default: theme('colors.gray.200');
+      --border-strong: theme('colors.gray.400');
+      --border-primary: theme('colors.blueberry.500');
+      --illustration-primary: theme('colors.blueberry.500');
+      --illustration-secondary: theme('colors.blueberry.600');
+      --overlay-image-light: hsl(0 0 100% / 0.7);
+      --overlay-image-medium: hsl(0 0 100% / 0.8);
+    }
+
+    /* Dark theme (system) */
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --text-default: theme('colors.white');
+        --text-subtle: theme('colors.gray.400');
+        --text-primary: theme('colors.blueberry.300');
+        --text-on-primary: theme('colors.white');
+        --text-on-inverted: theme('colors.black');
+        --bg-default: theme('colors.gray.900');
+        --bg-subtle: theme('colors.gray.800');
+        --bg-primary: theme('colors.blueberry.500');
+        --bg-inverted: theme('colors.white');
+        --border-default: theme('colors.gray.700');
+        --border-strong: theme('colors.gray.600');
+        --border-primary: theme('colors.blueberry.300');
+        --illustration-primary: theme('colors.blueberry.300');
+        --illustration-secondary: theme('colors.blueberry.100');
+        --overlay-image-light: hsl(0 0 0% / 0.7);
+        --overlay-image-medium: hsl(0 0 0% / 0.6);
+      }
+    }
+
+    /* Dark theme (manual) */
+    /* Same values as above. Can't avoid repetition, unfortunately. */
+    .dark {
+      --text-default: theme('colors.white');
+      --text-subtle: theme('colors.gray.400');
+      --text-primary: theme('colors.blueberry.300');
+      --text-on-primary: theme('colors.white');
+      --text-on-inverted: theme('colors.black');
+      --bg-default: theme('colors.gray.900');
+      --bg-subtle: theme('colors.gray.800');
+      --bg-primary: theme('colors.blueberry.500');
+      --bg-inverted: theme('colors.white');
+      --border-default: theme('colors.gray.700');
+      --border-strong: theme('colors.gray.600');
+      --border-primary: theme('colors.blueberry.300');
+      --illustration-primary: theme('colors.blueberry.300');
+      --illustration-secondary: theme('colors.blueberry.100');
+      --overlay-image-light: hsl(0 0 0% / 0.7);
+      --overlay-image-medium: hsl(0 0 0% / 0.6);
+    }
+  }
 </style>
