--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="min-h-screen">
     <slot />
   </body>
 </html>
