💄 Layout.astro: Set default text color

--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
   </head>
-  <body class="min-h-screen">
+  <body class="min-h-screen text-default">
     <slot />
   </body>
 </html>
