✨ Web: Add FeaturedWork component

--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -2,6 +2,8 @@
 import Layout from '@/layouts/Layout.astro';
 import Hero from '@/components/Hero.tsx';
 import Bio from '@/components/Bio';
+import FeaturedWork from '@/components/FeaturedWork';
+import WaveLine from '@/components/WaveLine';
 ---
 
 <Layout>
@@ -15,6 +17,10 @@ import Bio from '@/components/Bio';
       >
       </div>
       <Bio />
+      <div class="px-4 py-16 lg:px-16 lg:py-32">
+        <WaveLine className="bg-subtle" />
+      </div>
+      <FeaturedWork />
     </div>
   </main>
 </Layout>
