--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '@/layouts/Layout.astro';
 import Hero from '@/components/Hero.tsx';
 import Bio from '@/components/Bio';
 import FeaturedWork from '@/components/FeaturedWork';
+import MoreThings from '@/components/MoreThings';
 import WaveLine from '@/components/WaveLine';
 ---
 
@@ -10,7 +11,7 @@ import WaveLine from '@/components/WaveLine';
   <main>
     <Hero />
     <div
-      class="lg:rounded-t-6xl rounded-t-4xl shadow-main-container relative -mt-16 bg-default"
+      class="relative -mt-16 rounded-t-4xl bg-default shadow-main-container lg:rounded-t-6xl"
     >
       <div
         class="absolute left-1/2 top-4 h-1 w-16 -translate-x-1/2 rounded-full bg-subtle lg:hidden"
@@ -21,6 +22,10 @@ import WaveLine from '@/components/WaveLine';
         <WaveLine className="bg-subtle" />
       </div>
       <FeaturedWork />
+      <div class="px-4 py-16 lg:px-16 lg:py-32">
+        <WaveLine className="bg-subtle" />
+      </div>
+      <MoreThings />
     </div>
   </main>
 </Layout>
