🚚 Web: Move section components to `sections`directory

--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import Hero from '@/components/Hero.tsx';
-import Bio from '@/components/Bio';
-import FeaturedWork from '@/components/FeaturedWork';
-import MoreThings from '@/components/MoreThings';
-import Contact from '@/components/Contact';
+import Hero from '@/components/sections/Hero';
+import Bio from '@/components/sections/Bio';
+import FeaturedWork from '@/components/sections/FeaturedWork';
+import MoreThings from '@/components/sections/MoreThings';
+import Contact from '@/components/sections/Contact';
 import WaveLine from '@/components/WaveLine';
 ---
 
