--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from '@/components/Navigation';
 import { Toaster } from 'react-hot-toast';
 
 interface Props {
@@ -25,6 +26,7 @@ const { title } = Astro.props;
     />
   </head>
   <body class="min-h-screen text-default">
+    <Navigation client:load />
     <slot />
     <Toaster
       client:idle
