--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from '@/components/Navigation';
+import Footer from '@/components/sections/Footer';
 import { Toaster } from 'react-hot-toast';
 
 interface Props {
@@ -27,7 +28,19 @@ const { title } = Astro.props;
   </head>
   <body class="min-h-screen text-default">
     <Navigation client:load />
-    <slot />
+    <div class="overflow-clip rounded-b-4xl">
+      <slot name="header" />
+      <main
+        class="relative z-20 -mt-8 min-h-screen bg-default shadow-main-container lg:-mt-16 lg:rounded-t-6xl"
+      >
+        <div
+          class="absolute left-1/2 top-4 h-1 w-16 -translate-x-1/2 rounded-full bg-subtle lg:hidden"
+        >
+        </div>
+        <slot />
+      </main>
+    </div>
+    <Footer client:visible />
     <Toaster
       client:idle
       position="bottom-center"
