--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
   </head>
-  <body class="min-h-screen text-default">
+  <body class="min-h-screen bg-default text-default">
     <Navigation client:load />
     <div class="overflow-clip rounded-b-4xl">
       <slot name="header" />
