--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -5,9 +5,10 @@ import { Toaster } from 'react-hot-toast';
 
 interface Props {
   title?: string;
+  noHeader?: boolean;
 }
 
-const { title } = Astro.props;
+const { title, noHeader = false } = Astro.props;
 ---
 
 <!doctype html>
@@ -29,9 +30,9 @@ const { title } = Astro.props;
   <body class="min-h-screen bg-default text-default">
     <Navigation client:load />
     <div class="overflow-clip rounded-b-4xl lg:rounded-b-6xl">
-      <slot name="header" />
+      {!noHeader && <slot name="header" />}
       <main
-        class="relative z-20 -mt-8 min-h-screen rounded-t-4xl bg-default shadow-main-container lg:-mt-16 lg:rounded-t-6xl"
+        class={`${noHeader ? '' : '-mt-8 lg:-mt-16'} relative z-20 rounded-t-4xl bg-default shadow-main-container lg:rounded-t-6xl`}
       >
         <div
           class="absolute left-1/2 top-4 h-1 w-16 -translate-x-1/2 rounded-full bg-subtle lg:hidden"
