--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { title, noHeader = false } = Astro.props;
       rel="stylesheet"
     />
   </head>
-  <body class="min-h-screen bg-default text-default">
+  <body class="min-h-screen cursor-default bg-default text-default">
     <Navigation client:load />
     <div class="overflow-clip rounded-b-4xl lg:rounded-b-6xl">
       {!noHeader && <slot name="header" />}
@@ -117,6 +117,40 @@ const { title, noHeader = false } = Astro.props;
       --illustration-secondary: theme('colors.blueberry.100');
       --overlay-dim-default: hsl(0 0 0% / 0.6);
       --overlay-dim-strong: hsl(0 0 0% / 0.8);
+    }
+  }
+
+  @layer utilities {
+    .cursor-default {
+      @apply cursor-default-light dark:cursor-default-dark;
+    }
+
+    .cursor-text {
+      @apply cursor-text-light dark:cursor-text-dark;
+    }
+
+    .cursor-pointer {
+      @apply cursor-pointer-light dark:cursor-pointer-dark;
+    }
+
+    .cursor-move {
+      @apply cursor-move-light dark:cursor-move-dark;
+    }
+  }
+
+  @layer components {
+    a:hover,
+    button:hover {
+      @apply cursor-pointer;
+    }
+
+    label {
+      @apply cursor-default;
+    }
+
+    input,
+    textarea {
+      @apply cursor-text;
     }
   }
 </style>
