--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -16,17 +16,58 @@ const tailwindConfig = useTailwindConfig();
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title && title + ' |'} Marcus Billman</title>
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@1,400;1,500&family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+
+    <!-- HTML meta tags -->
+    <title>{title && title + ' |'} Marcus Billman</title>
+    <meta
+      name="description"
+      content="I love designing interfaces, writing code and spreading the joy of creating cool things. I’m also a tech enthusiast and hobbyist musician."
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+
+    <!-- Open Graph meta tags -->
+    <meta property="og:url" content="https://marcusbillman.com" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Marcus Billman — Designer, developer and human"
+    />
+    <meta
+      property="og:description"
+      content="I love designing interfaces, writing code and spreading the joy of creating cool things. I’m also a tech enthusiast and hobbyist musician."
+    />
+    <meta
+      property="og:image"
+      content="https://marcusbillman.com/assets/images/social-embed.jpg"
+    />
+
+    <!-- Twitter meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="marcusbillman.com" />
+    <meta property="twitter:url" content="https://marcusbillman.com" />
+    <meta
+      name="twitter:title"
+      content="Marcus Billman — Designer, developer and human"
+    />
+    <meta
+      name="twitter:description"
+      content="I love designing interfaces, writing code and spreading the joy of creating cool things. I’m also a tech enthusiast and hobbyist musician."
+    />
+    <meta
+      name="twitter:image"
+      content="https://marcusbillman.com/assets/images/social-embed.jpg"
     />
   </head>
   <body class="min-h-screen cursor-default bg-default text-default">
