--- a/web/src/pages/404.astro
+++ b/web/src/pages/404.astro
@@ -3,6 +3,6 @@ import Layout from '@/layouts/Layout.astro';
 import NotFoundSection from '@/components/sections/NotFoundSection';
 ---
 
-<Layout title="Contact" noHeader>
+<Layout title="Page not found" noHeader>
   <NotFoundSection />
 </Layout>
