💫 Layout: Add smooth scrolling

--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const tailwindConfig = useTailwindConfig();
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="motion-safe:scroll-smooth">
   <head>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
