--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -154,15 +154,15 @@ const tailwindConfig = useTailwindConfig();
     /* Dark theme (system) */
     @media (prefers-color-scheme: dark) {
       :root {
-        --text-default: theme('colors.white');
+        --text-default: theme('colors.gray.100');
         --text-subtle: theme('colors.gray.400');
         --text-primary: theme('colors.blueberry.300');
-        --text-on-primary: theme('colors.white');
+        --text-on-primary: theme('colors.gray.100');
         --text-on-inverted: theme('colors.black');
         --bg-default: theme('colors.gray.900');
         --bg-subtle: theme('colors.gray.800');
         --bg-primary: theme('colors.blueberry.500');
-        --bg-inverted: theme('colors.white');
+        --bg-inverted: theme('colors.gray.100');
         --border-default: theme('colors.gray.700');
         --border-strong: theme('colors.gray.600');
         --border-primary: theme('colors.blueberry.300');
@@ -176,15 +176,15 @@ const tailwindConfig = useTailwindConfig();
     /* Dark theme (manual) */
     /* Same values as above. Can't avoid repetition, unfortunately. */
     .dark {
-      --text-default: theme('colors.white');
+      --text-default: theme('colors.gray.100');
       --text-subtle: theme('colors.gray.400');
       --text-primary: theme('colors.blueberry.300');
-      --text-on-primary: theme('colors.white');
+      --text-on-primary: theme('colors.gray.100');
       --text-on-inverted: theme('colors.black');
       --bg-default: theme('colors.gray.900');
       --bg-subtle: theme('colors.gray.800');
       --bg-primary: theme('colors.blueberry.500');
-      --bg-inverted: theme('colors.white');
+      --bg-inverted: theme('colors.gray.100');
       --border-default: theme('colors.gray.700');
       --border-strong: theme('colors.gray.600');
       --border-primary: theme('colors.blueberry.300');
