🚚 Web: Rename `util` directory to `utils`

--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import { Toaster } from 'react-hot-toast';
 
 import Navigation from '@/components/Navigation';
 import Footer from '@/components/sections/FooterSection';
-import { useTailwindConfig } from '@/util/tailwind';
+import { useTailwindConfig } from '@/utils/tailwind';
 
 interface Props {
   title?: string;
