--- a/web/src/pages/404.astro
+++ b/web/src/pages/404.astro
@@ -4,5 +4,5 @@ import Layout from '@/layouts/Layout.astro';
 ---
 
 <Layout title="Page not found" noHeader>
-  <NotFoundSection />
+  <NotFoundSection client:load />
 </Layout>
