--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -72,7 +72,7 @@ const { title, noHeader = false } = Astro.props;
   <body class="min-h-screen cursor-default bg-default text-default">
     <a
       href="#main"
-      class="absolute left-8 top-4 z-[60] w-44 origin-center scale-0 rounded-full bg-primary p-4 text-center font-medium text-on-primary transition-transform focus:scale-100"
+      class="absolute left-8 top-4 z-[60] w-44 origin-center rounded-full bg-primary p-4 text-center font-medium text-on-primary opacity-0 transition-all focus:opacity-100 motion-safe:scale-0 motion-safe:focus:scale-100"
     >
       Skip to content
     </a>
