✨ Layout: Add console greeting

--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -126,6 +126,7 @@ const { title, noHeader = false } = Astro.props;
         },
       }}
     />
+    <script src="@/scripts/console-greeting"></script>
   </body>
 </html>
 <style is:global>
