🌐 Web: Replace strings with translation keys

--- a/web/src/pages/404.astro
+++ b/web/src/pages/404.astro
@@ -1,8 +1,9 @@
 ---
 import NotFoundSection from '@/components/sections/NotFoundSection';
 import Layout from '@/layouts/Layout.astro';
+import t from '@/utils/i18n';
 ---
 
-<Layout title="Page not found" noHeader>
+<Layout title={t('404.title')} noHeader>
   <NotFoundSection client:load />
 </Layout>
