--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import { Toaster } from 'sonner';
 
 import Navigation from '@/components/Navigation';
 import Footer from '@/components/sections/FooterSection';
+import t from '@/utils/i18n';
 
 interface Props {
   title?: string;
@@ -27,11 +28,8 @@ const { title, noHeader = false } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 
     <!-- HTML meta tags -->
-    <title>{title && title + ' |'} Marcus Billman</title>
-    <meta
-      name="description"
-      content="I love designing interfaces, writing code and spreading the joy of creating cool things. I’m also a tech enthusiast and hobbyist musician."
-    />
+    <title>{title && title + ' | ' + t('common.fullName')}</title>
+    <meta name="description" content={t('seo.description')} />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
@@ -39,14 +37,8 @@ const { title, noHeader = false } = Astro.props;
     <!-- Open Graph meta tags -->
     <meta property="og:url" content="https://marcusbillman.com" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Marcus Billman — Designer, developer and human"
-    />
-    <meta
-      property="og:description"
-      content="I love designing interfaces, writing code and spreading the joy of creating cool things. I’m also a tech enthusiast and hobbyist musician."
-    />
+    <meta property="og:title" content={t('seo.title')} />
+    <meta property="og:description" content={t('seo.description')} />
     <meta
       property="og:image"
       content="https://marcusbillman.com/assets/images/social-embed.jpg"
@@ -56,14 +48,8 @@ const { title, noHeader = false } = Astro.props;
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="marcusbillman.com" />
     <meta property="twitter:url" content="https://marcusbillman.com" />
-    <meta
-      name="twitter:title"
-      content="Marcus Billman — Designer, developer and human"
-    />
-    <meta
-      name="twitter:description"
-      content="I love designing interfaces, writing code and spreading the joy of creating cool things. I’m also a tech enthusiast and hobbyist musician."
-    />
+    <meta name="twitter:title" content={t('seo.title')} />
+    <meta name="twitter:description" content={t('seo.description')} />
     <meta
       name="twitter:image"
       content="https://marcusbillman.com/assets/images/social-embed.jpg"
@@ -89,7 +75,7 @@ const { title, noHeader = false } = Astro.props;
       href="#main"
       class="absolute left-8 top-4 z-[60] w-44 origin-center rounded-full bg-primary p-4 text-center font-medium text-on-primary opacity-0 transition-all focus:opacity-100 motion-safe:scale-0 motion-safe:focus:scale-100"
     >
-      Skip to content
+      {t('navigation.skipToContent')}
     </a>
     <Navigation client:idle />
     <div class="overflow-clip rounded-b-4xl lg:rounded-b-6xl">
